<resources>
    <string name="app_name">Maps &amp; Flags</string>

    <string name="preferencias_principal">preferencias_principal</string>
    <string name="digito_1_calculadora">1</string>
    <string name="digito_2_calculadora">2</string>
    <string name="digito_3_calculadora">3</string>
    <string name="digito_4_calculadora">4</string>
    <string name="digito_5_calculadora">5</string>
    <string name="digito_0_calculadora">0</string>
    <string name="digito_9_calculadora">9</string>
    <string name="digito_8_calculadora">8</string>
    <string name="digito_7_calculadora">7</string>
    <string name="digito_6_calculadora">6</string>
    <string name="digito_C_calculadora">CE</string>
    <string name="digito_IGUAL_calculadora">=</string>
    <string name="digito_moneda_origen_calculadora">EUR</string>
    <string name="digito_moneda_destino_calculadora">USD</string>
    <string name="digito_PUNTO_calculadora">.</string>

    <string name="main_activity_titulo_pestaña_boton_animado">Botón Animado</string>
    <string name="main_activity_titulo_pestaña_calculadora">Calculadora</string>


    <string name="calculadora_overflow">Err. OverFlow</string>
    <string name="tab_other_title">Otra</string>
    <string name="otra_tab_title">Prueba de pestaña con icono</string>
    <string name="digito_MAS_calculadora">+</string>
    <string name="digito_MENOS_calculadora">-</string>
    <string name="acerca_de">Aplicación de Mapas, Himnos y Geolocalización</string>
    <string name="btn_text_solicitud_permisos">Solicitud de Permisos</string>
    <string name="btn_crea_notificacion_alarma">Crear Alarma</string>
    <string name="main_activity_titulo_pestaña_mapa">Mapa</string>
    <string name="permiso_posicionamiento_info">Sin los permisos de localización no se mostrará la localización</string>
    <string name="permiso_OK">OK</string>
    <string name="sinpais">Indefinido</string>
    <string name="sinmoneda">Sin moneda</string>


    <string name="pref_pais_origen">pais</string>
    <string name="pref_pais_origen_sum">Seleccione su País</string>
    <string name="pref_pais_origen_tit">Pais</string>

    <string name="preferencias_configuracion">Configuración</string>
    <string name="recycler_himno">Himno</string>
    <string name="main_activity_titulo_pestaña_lista_paises">Paises</string>
    <string name="divisa_tab_mapa">Moneda/s</string>
    <string name="main_activity_titulo_preferences">Configuración</string>
    <string name="cancelar">Cancelar</string>
    <string name="seleccion_divisa_aceptar">Seleccionar</string>

    <string name="accion_pais_origen">es.maps.programacion.fundamentos.PAIS</string>
    <string name="error_divisas_iguales">Error. Las divisas no pueden ser iguales!</string>
    <string name="digito_POR_calculadora">*</string>
    <string name="digito_DIV_calculadora">/</string>
    <string name="buscar">Buscar</string>
    <string name="tab_calculadora_error_importe_a_convertir_0">Introduzca un importe distinto de 0</string>
    <string name="tab_mapa_configuracion_localizacion">Configuración de localización</string>
    <string name="tab_mapa_configuracion_localizacion2">Ningún proveedor de localización activo. ¿Quiere…</string>
    <string name="tab_mapa_configuracion">Configuración</string>
    <string name="tab_map_configuracion_cancelar">Cancelar</string>
    <string name="tab_mapa_msg_cacheando">Buffering:</string>
    <string name="tab_calculadora_msg_divisas_iguales">"Divisas Iguales,... cambiando destino a "</string>
    <string name="tab_calculadora_operacion_no_implemenada">Operación no implementada</string>
    <string name="tab_calculadora_msg_pulse">"Pulse "</string>
    <string name="tab_calculadora_msg_digitos_excedidos">No se permiten más digitos</string>
    <string name="tab_calculadora_msg_error_convirtiendo_divisa">Ha ocurrido un error! Inténtelo de nuevo</string>
    <string name="tab_calculadora_msg_calculando">Calculando...</string>
    <string name="sql_error_listar_paises">Error a listar los paises</string>
    <string name="sql_error_listar_divisas">Error al listar los divisas</string>
    <string name="sql_error_listar_un_pais">Error al obtener el pais</string>
    <string name="sql_error_listar_una_divisa">Error al obtener divisa</string>
    <string name="tab_mapa_msg_moneda">Moneda/s:\n</string>
    <string name="tab_mapa_msg_mapa_indefinido">Indefinido</string>
    <string name="actividad_dialogo_listado_error_opcion_no_seleccionada">Opción no seleccionada!</string>


</resources>
